2006-04-02  Dan Winship  <danw@novell.com>

	* libsoup/soup-headers.c (soup_headers_parse_request): Rewrite
	Request-Line-parsing code to not have a lame max length. #335040.

	* Makefile.am (install-data-local): Install the .pc file mode 644,
	not 755. #330878

	* libsoup/soup-auth-digest.c:
	* libsoup/soup-auth.c:
	* libsoup/soup-message-client-io.c:
	* libsoup/soup-message-server-io.c:
	* libsoup/soup-message.c:
	* libsoup/soup-method.c:
	* libsoup/soup-server-auth.c:
	* tests/get.c: replace locale-ish strcasecmps with
	g_ascii_strcasecmp

	* libsoup/*.c: fix most signed/unsigned mismatch warnings

2006-03-03  Dan Winship  <danw@novell.com>

	* configure.in: bump version to 2.2.91.

	* NEWS: Update

2006-03-03  Dan Winship  <danw@novell.com>

	* libsoup/soup-dns.c (soup_dns_lookup_resolve_async): Take a
	GMainContext as well, and update the resolution code to dispatch
	each lookup result in the correct context.

	* libsoup/soup-address.c (soup_address_resolve_async_full): New
	method that takes a GMainContext to pass to
	soup_dns_lookup_resolve_async.

	* libsoup/soup-socket.c (soup_socket_connect): Use
	soup_address_resolve_async_full. Fixes a problem reported by Armin
	Bauer.

	* configure.in: update to require glib 2.6, since apparently the
	code does.

2006-02-25  Veerapuram Varadhan <vvaradhan@novell.com>

	* libsoup/soup-connection.c:
	* libsoup/soup-session.c:
	* libsoup/soup-socket.c: add a "timeout" property,
	which gets passed from server to socket, and session to connection
	to socket, allowing blocking non-responsive sync connections to 
	return.  Combination of "EAGAIN" && "Blocking" connection is treated
	as error and the connection will be terminated and the control 
	is returned to the caller immediately.
		
2006-02-02  Tor Lillqvist  <tml@novell.com>

	* configure.in: Don't use getaddrinfo() etc or try to support IPv6
	on Windows, as they are present by default on XP only. We do want
	to support Windows 2000, too.
